deploy/laravel-setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
      - name: laravel
        image: cheikhckrt/custom-laravel:8.3.3
        # command: ["php", "artisan", "serve", "--host=0.0.0.0", "--port=9000"]
        # command: ["tail", "-f", "/dev/null"]
        command:
        - /bin/sh
        - -c
        - |
          echo "[www]
          listen = 0.0.0.0:9000
          user = www-data
          group = www-data
          pm = dynamic
          pm.max_children = 5
          pm.start_servers = 2
          pm.min_spare_servers = 1
          pm.max_spare_servers = 3" > /usr/local/etc/php-fpm.d/www.conf;
          php-fpm --nodaemonize
        ports:
        - containerPort: 9000
          protocol: TCP
          name: http
        volumeMounts:
        - name: app-code
          mountPath: /var/www/html
      volumes:
      - name: app-code
        hostPath:
          path: /home/cba/projet/laravel-kub-mongo-cluster-demo
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: laravel-service
spec:
  type: ClusterIP
  selector:
    app: laravel
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
    name: fpm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/nginx.conf
          subPath: nginx.conf
        - name: app-code
          mountPath: /var/www/html
        command:  
        - /bin/sh
        - -c
        - |
          rm -f /etc/nginx/conf.d/default.conf && chown -R 1000:www-data /var/www/html && nginx -g 'daemon off;'
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      - name: app-code
        hostPath:
          path: /home/cba/projet/laravel-kub-mongo-cluster-demo
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: nginx-service
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
